--- a/Final Project/my-new-app/src/PantryInput.css
+++ b/Final Project/my-new-app/src/PantryInput.css
@@ -18,7 +18,7 @@
 }
 
 .diet-filter {
-  width: 100%; /* Makes the select box fill the full width */
+  width: 100%;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -34,7 +34,7 @@
   padding: 10px 20px;
   cursor: pointer;
   font-size: 1rem;
-  width: 100%; /* Makes the button fill the full width */
+  width: 100%;
 }
 
 .search-button:hover {
